<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_salir"
        android:title="@string/salir"
        android:icon="@drawable/indice1"
        app:showAsAction="always"/>
    <item
        android:id="@+id/main_saludar"
        android:title="@string/saludar"
        android:icon="@drawable/indice"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/main_cambiar"
        android:title="@string/cambiar"
        app:showAsAction="never"/>
    <item
        android:id="@+id/main_nuevo"
        android:title="@string/hola"
        android:icon="@drawable/indice"
        app:showAsAction="collapseActionView"/>
</menu>