<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingTop="@android:dimen/app_icon_size"
    tools:context=".SecondActivity">
    <include layout="@layout/mi_appbar"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta_color" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amarillo" />

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/azul" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gris" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@android:dimen/app_icon_size"
        android:paddingTop="@android:dimen/app_icon_size"
        android:gravity="center_horizontal">



        <Button
            android:id="@+id/b_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar" />

        <Button
            android:id="@+id/b_salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salir" />

    </LinearLayout>

</LinearLayout>